--- a/contact.html
+++ b/contact.html
@@ -98,14 +98,18 @@
         <h1 class="text-center mb-4">Reservation de table</h1>
         <form id="form" class="form-container">
            <form class="row g-3">
-  <div class="col-md-4">
-    <label for="validationDefault01" class="form-label">Penokm</label>
-    <input type="text" class="form-control" id="validationDefault01" placeholder="insérez votre nom" required>
-  </div>
-  <div class="col-md-4">
-    <label for="validationDefault02" class="form-label">Nom de Famille</label>
-    <input type="text" class="form-control" id="validationDefault02" placeholder="insérez votre prenom" required>
-  </div>
+           <div class="col-md-4">
+          <label for="validationDefault01" class="form-label">Penom</label>
+          <input type="text" class="form-control" id="validationDefault01" placeholder="insérez votre nom" required>
+          </div>
+          <div class="col-md-4">
+          <label for="validationDefault02" class="form-label">Nom de Famille</label>
+            <input type="text" class="form-control" id="validationDefault02" placeholder="insérez votre prenom" required>
+          </div>
+           <div class="col-md-4">
+          <label for="validationDefault02" class="form-label">Numero de telephone</label>
+            <input type="text" class="form-control" id="validationDefault02" placeholder="insérez votre numero de telephone" required>
+          </div>
 
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
