--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                 <label class="form-check-label" for="check">Accepter les conditions</label>
             </div>
 
-            <button type="submit" class="btn btn-primary">Envoyer</button>
+            <button type="submit" class="btn btn-primary">Faire une Reservation</button>
         </form>
 
 
