--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,11 @@
           <label for="validationDefault02" class="form-label">Numero de telephone</label>
             <input type="text" class="form-control" id="validationDefault02" placeholder="insérez votre numero de telephone" required>
           </div>
+         <div class="mb-3">
+            <label for="reservation-date" class="form-label">Date de réservation</label>
+            <input type="date" class="form-control" id="reservation-date" required>
+         </div>
+
 
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
