--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@
     <!-- Section principale -->
     <section class="form-section">
         <div id="alert" class="alert alert-success alert-dismissible d-none">
-            Votre message est arrive avec succes
-            <button class="btn-close" data-ns-dismiss="alert" arial-label="close"></button>
+            Votre message pour la reservation est arrive avec succes
+           <button class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
         <h1 class="text-center mb-4">Reservation de table</h1>
         <form id="form" class="form-container">
@@ -158,6 +158,7 @@
             function (event) {
                 //empeche de envoye le formulaire est de refrachir le page
                 event.preventDefault();
+                //on utilise le display none pour ferme le message de alert 
                 document.getElementById("alert").classList.remove("d-none");
             });
 
