--- a/contact.html
+++ b/contact.html
@@ -76,13 +76,13 @@
                         <li>
                             <hr class="dropdown-divider" />
                         </li>
-                        <li><a class="dropdown-item" href="projet3.html">Menu soire</a></li>
+                        <li><a class="dropdown-item" href="projet3.html">Menu soirée</a></li>
                     </ul>
                     </li>
 
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-primary-custom">+977 9845667543</button>
+                    <button class="btn btn-primary-custom">+32 453 367 890 456</button>
                 </form>
             </div>
         </div>
