--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-primary-custom">+977 9845667543</button>
+                    <button class="btn btn-primary-custom">+32 453 367 890 456</button>
                 </form>
             </div>
         </div>
