--- a/projet3.html
+++ b/projet3.html
@@ -82,12 +82,12 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="projet.html">Menu soire</a></li>
+                            <li><a class="dropdown-item" href="projet.html">Menu soirée</a></li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-primary-custom" type="button">+977 9845667543</button>
+                    <button class="btn btn-primary-custom" type="button">+32 453 367 890 456</button>
                 </form>
             </div>
         </div>
