--- a/contact.html
+++ b/contact.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Restaurant sallè Élégance</title>
+    <title>Restaurant Salle Élégance</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
-        /* Navbar */
+        body {
+            padding-top: 150px; /* espace pour ne pas que le contenu soit caché par la navbar fixe */
+        }
+
         .navbar-custom {
             background-color: white;
             padding: 15px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        /* Section principale */
-
-
-
-        /* Boutons */
         .btn-primary-custom {
             background-color: rgb(240, 48, 48);
             color: white;
@@ -31,13 +30,11 @@
 
         .form-section {
             background-color: white;
-            /* gris clair */
             padding: 60px 20px;
         }
 
         footer {
             background-color: #dc3545;
-            /* rouge Bootstrap */
             margin-top: 40px;
         }
     </style>
@@ -45,100 +42,90 @@
 
 <body>
     <!-- Navbar -->
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom">
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand">
-                <img src="images\logo.jpg" alt="logo" width="120" height="120" />
+                <img src="images/logo.jpg" alt="logo" width="120" height="120" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!--la classe collapse navbar  c est la classe qui permete de faire disparaitre ou reapparaitre une navbar-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                     <li class="nav-item">
-                        <a class="nav-link text-danger fw-bold" href="index.html">A propos</a>
+                        <a class="nav-link text-danger fw-bold" href="index.html">À propos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="contact.html">Contact</a>
                     </li>
-                    <li class="nav-item dropdown">
                     <li class="nav-item">
-                        <a class="nav-link text-danger fw-bold" href="projet.html">Explore les differents plats</a>
+                        <a class="nav-link text-danger fw-bold" href="projet.html">Explore les différents plats</a>
                     </li>
-
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                        <li><a class="dropdown-item" href="projet2.html">Menu apres midi</a></li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-                        <li><a class="dropdown-item" href="projet3.html">Menu soirée</a></li>
-                    </ul>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-danger fw-bold" href="#" id="navbarDropdown"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Menus
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu après-midi</a></li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li><a class="dropdown-item" href="projet3.html">Menu soirée</a></li>
+                        </ul>
                     </li>
-
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-primary-custom">+32 453 367 890 456</button>
+                    <button class="btn btn-primary-custom" type="button">+32 453 367 890 456</button>
                 </form>
             </div>
         </div>
     </nav>
 
-
     <!-- Section principale -->
     <section class="form-section">
         <div id="alert" class="alert alert-success alert-dismissible d-none">
-            Votre message pour la reservation est arrive avec succes
-           <button class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
+            Votre message pour la réservation est arrivé avec succès.
+            <button class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
-        <h1 class="text-center mb-4">Reservation de table</h1>
-        <form id="form" class="form-container">
-           <form class="row g-3">
-           <div class="col-md-4">
-          <label for="validationDefault01" class="form-label">Penom</label>
-          <input type="text" class="form-control" id="validationDefault01" placeholder="insérez votre prenom" required>
-          </div>
-          <div class="col-md-4">
-          <label for="validationDefault02" class="form-label">Nom de Famille</label>
-            <input type="text" class="form-control" id="validationDefault02" placeholder="insérez votre nom de famille" required>
-          </div>
-           <div class="col-md-4">
-          <label for="validationDefault02" class="form-label">Numero de telephone</label>
-            <input type="text" class="form-control" id="validationDefault02" placeholder="insérez votre numero de telephone" required>
-          </div>
-         <div class="mb-3">
-            <label for="reservation-date" class="form-label">Date de réservation</label>
-            <input type="date" class="form-control" id="reservation-date" required>
-         </div>
-
-
+        <h1 class="text-center mb-4">Réservation de table</h1>
+        <form id="form" class="row g-3">
+            <div class="col-md-4">
+                <label for="prenom" class="form-label">Prénom</label>
+                <input type="text" class="form-control" id="prenom" placeholder="Insérez votre prénom" required>
+            </div>
+            <div class="col-md-4">
+                <label for="nom" class="form-label">Nom de famille</label>
+                <input type="text" class="form-control" id="nom" placeholder="Insérez votre nom de famille" required>
+            </div>
+            <div class="col-md-4">
+                <label for="telephone" class="form-label">Numéro de téléphone</label>
+                <input type="text" class="form-control" id="telephone" placeholder="Insérez votre numéro de téléphone" required>
+            </div>
+            <div class="mb-3">
+                <label for="reservation-date" class="form-label">Date de réservation</label>
+                <input type="date" class="form-control" id="reservation-date" required>
+            </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" placeholder="Insérez votre adresse email">
             </div>
-
             <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
                 <textarea class="form-control" id="message" rows="4"
                     placeholder="Écrivez votre message ici..."></textarea>
             </div>
-
             <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="check">
+                <input type="checkbox" class="form-check-input" id="check" required>
                 <label class="form-check-label" for="check">Accepter les conditions</label>
             </div>
-
-            <button type="submit" class="btn btn-primary">Faire une Reservation</button>
+            <button type="submit" class="btn btn-primary">Faire une réservation</button>
         </form>
-
-
     </section>
 
-    <footer class="p-3 bg-danger text-white text-center">
+    <footer class="p-3 text-white text-center">
         Suivez-nous sur les réseaux sociaux :
         <a href="https://www.facebook.com" target="_blank" class="text-white mx-2">
             <i class="bi bi-facebook"></i>
@@ -148,21 +135,14 @@
         </a>
         <br>2025 © Copyright
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script>
-        //la premiere partie serai a selectionne get element a partire sont element
-        //la deuxieme partie ca serie a ecoute en en evenement subit 
-        document.getElementById("form").addEventListener("submit",
-            function (event) {
-                //empeche de envoye le formulaire est de refrachir le page
-                event.preventDefault();
-                //on utilise le display none pour ferme le message de alert 
-                document.getElementById("alert").classList.remove("d-none");
-            });
 
+    <script>
+        document.getElementById("form").addEventListener("submit", function (event) {
+            event.preventDefault();
+            document.getElementById("alert").classList.remove("d-none");
+        });
     </script>
 </body>
 
 </html>
+
