--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 50px;
-            margin-top: 150px; /* Décale le contenu pour ne pas passer sous la navbar */
+            margin-top: 150px;
         }
 
         .hero-text {
@@ -105,25 +105,18 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="card p-5 text-center border-0 shadow-lg" style="border-radius: 10px;">
-                        <img src="images/profile.jpg" class="rounded-circle profile-img" alt="Photo de profil" />
+                        <img src="images/profile.jpg" class="profile-img mx-auto d-block" alt="Photo de profil" />
                         <p class="mt-3 text-dark">
-                            Bienvenue dans mon univers gastronomique !
+                            Bienvenue dans mon univers gastronomique !<br><br>
 
                             En tant que web développeur passionné de gastronomie, je suis ravi de vous présenter mon
                             site web dédié aux délices de mon restaurant. Découvrez les plats extraordinaires qui font
-                            la réputation de notre établissement et explorez les spécialités qui nous définissent.
+                            la réputation de notre établissement et explorez les spécialités qui nous définissent.<br><br>
 
-                            Un voyage culinaire à travers nos créations
+                            Un voyage culinaire à travers nos créations :<br><br>
 
-                            Dans notre restaurant, nous sommes fiers de proposer une cuisine raffinée et authentique,
-                            élaborée avec des ingrédients frais et de qualité. Nos plats sont conçus pour vous faire
-                            découvrir de nouvelles saveurs et de nouvelles textures, tout en respectant les traditions
-                            culinaires qui nous ont inspirés.
-
-                            Découvrez nos spécialités :
-
-                            - Plats signature : nos créations uniques et originales, conçues pour vous surprendre et vous régaler.
-                            - Classiques revisités : nos interprétations modernes des grands classiques.
+                            - Plats signature : nos créations uniques et originales, conçues pour vous surprendre et vous régaler.<br>
+                            - Classiques revisités : nos interprétations modernes des grands classiques.<br>
                             - Spécialités régionales : un voyage autour du monde à travers les assiettes.
                         </p>
                         <h5 class="fw-bold mt-2 text-dark">Musafiri Muyumba - Web développeur</h5>
@@ -159,3 +152,4 @@
 </body>
 
 </html>
+
