--- a/contact.html
+++ b/contact.html
@@ -101,8 +101,8 @@
                 <input type="text" class="form-control" id="nom" placeholder="Insérez votre nom de famille" required>
             </div>
             <div class="col-md-4">
-                <label for="telephone" class="form-label">Numéro de téléphone</label>
-                <input type="text" class="form-control" id="telephone" placeholder="Insérez votre numéro de téléphone" required>
+                <label for="telephone" class="form-label">Numéro de table</label>
+                <input type="num" class="form-control" id="numero" placeholder="Insérez votre numéro de table" required>
             </div>
             <div class="mb-3">
                 <label for="reservation-date" class="form-label">Date de réservation</label>
