--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
         .navbar-custom {
             background-color: white;
-            padding: 15px;
+            padding: 15px; /*on utilise verticalement de haut et en bas en espacement de 15px de exterieure et interieure de mon contenue de mon navbar-custom
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
@@ -30,38 +30,46 @@
 
         .form-section {
             background-color: white;
-            padding: 60px 20px;
+            padding: 60px 20px; /*on utilise un verticale  de haut et en bas on utilise en espacement entre l exterieure et sont contenue interieure de 60px et de gauche et droite de 20px
         }
 
         footer {
             background-color: #dc3545;
-            margin-top: 40px;
+            margin-top: 40px; /*on utilise margin-top de 40px pour que la en haut le margin soit de 40px pour mon footer
         }
     </style>
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- Navbar avec tous le menu comment a propros et contact et explore differents plats on utilise custom fixed-top pour tenir le navbar fixed au nveau de la page -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand">
                 <img src="images/logo.jpg" alt="logo" width="120" height="120" />
             </a>
+            <!-- 
+        Bouton hamburger (menu déroulant) visible uniquement sur les petits écrans. 
+        Quand on clique dessus, il affiche ou masque les liens de navigation grâce au système de collapse de Bootstrap. 
+-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                     <!-- Élément de menu simple vers la page "index.html" -->
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="index.html">À propos</a>
                     </li>
+                        <!-- Élément de menu simple vers la page "contact.html" -->
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="contact.html">Contact</a>
                     </li>
+                    <!-- Élément de menu simple vers la page "projet.html" -->
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="projet.html">Explore les différents plats</a>
                     </li>
+                    <!-- Élément de menu déroulant avec sous-menus projet.html et projet2.html -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-danger fw-bold" href="#" id="navbarDropdown"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -77,18 +85,19 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="d-flex">
+                     <form class="d-flex">
                     <button class="btn btn-primary-custom" type="button">+32 453 367 890 456</button>
                 </form>
             </div>
         </div>
     </nav>
 
-    <!-- Section principale -->
+    <!-- Section principale avec le formulaire de reservation -->
     <section class="form-section">
         <div id="alert" class="alert alert-success alert-dismissible d-none">
             Votre message pour la réservation est arrivé avec succès.
-            <button class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
+            <!-- c est bouton permete de ferme le message de alert-->
+            <button class="btn-close" data-bs-dismiss="alert" aria-label="close"></button> 
         </div>
         <h1 class="text-center mb-4">Réservation de table</h1>
         <form id="form" class="row g-3">
@@ -124,7 +133,7 @@
             <button type="submit" class="btn btn-primary">Faire une réservation</button>
         </form>
     </section>
-
+<!--le footer le text sera au centre et la couleur de text sera au centre-->
     <footer class="p-3 text-white text-center">
         Suivez-nous sur les réseaux sociaux :
         <a href="https://www.facebook.com" target="_blank" class="text-white mx-2">
