--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,7 @@
                         </ul>
                     </li>
                 </ul>
+                <!-- c est pour affiche de maniere horizontale le bouton de numeroe et le formualire
                      <form class="d-flex">
                     <button class="btn btn-primary-custom" type="button">+32 453 367 890 456</button>
                 </form>
