--- a/contact.html
+++ b/contact.html
@@ -2,24 +2,33 @@
 <html lang="fr">
 
 <head>
+    <!-- Metadonnées de base pour le navigateur -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Restaurant Salle Élégance</title>
+
+    <!-- Liens vers Bootstrap CSS et les icônes Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- Script Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Style CSS personnalisé -->
     <style>
+        /* Espace en haut pour éviter que le contenu soit caché par la navbar fixe */
         body {
-            padding-top: 150px; /* espace pour ne pas que le contenu soit caché par la navbar fixe */
+            padding-top: 150px;
         }
 
+        /* Apparence personnalisée de la navbar */
         .navbar-custom {
             background-color: white;
             padding: 15px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
+        /* Style personnalisé du bouton de téléphone */
         .btn-primary-custom {
             background-color: rgb(240, 48, 48);
             color: white;
@@ -28,11 +37,13 @@
             border: none;
         }
 
+        /* Apparence de la section formulaire */
         .form-section {
             background-color: white;
             padding: 60px 20px;
         }
 
+        /* Style du pied de page */
         footer {
             background-color: #dc3545;
             margin-top: 40px;
@@ -41,16 +52,21 @@
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- Navbar fixe avec logo, liens de navigation et bouton de téléphone -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container-fluid">
+            <!-- Logo du restaurant -->
             <a class="navbar-brand">
                 <img src="images/logo.jpg" alt="logo" width="120" height="120" />
             </a>
+
+            <!-- Bouton burger pour affichage mobile (toggle/collapse du menu) -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- Menu de navigation principal -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -62,6 +78,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="projet.html">Explore les différents plats</a>
                     </li>
+                    <!-- Menu déroulant pour les différents menus -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-danger fw-bold" href="#" id="navbarDropdown"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -77,6 +94,8 @@
                         </ul>
                     </li>
                 </ul>
+
+                <!-- Bouton de téléphone aligné à droite -->
                 <form class="d-flex">
                     <button class="btn btn-primary-custom" type="button">+32 453 367 890 456</button>
                 </form>
@@ -84,47 +103,68 @@
         </div>
     </nav>
 
-    <!-- Section principale -->
+    <!-- Section formulaire de réservation -->
     <section class="form-section">
+        <!-- Message de confirmation caché par défaut -->
         <div id="alert" class="alert alert-success alert-dismissible d-none">
             Votre message pour la réservation est arrivé avec succès.
             <button class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
+
+        <!-- Titre de la section -->
         <h1 class="text-center mb-4">Réservation de table</h1>
+
+        <!-- Formulaire de réservation -->
         <form id="form" class="row g-3">
+            <!-- Champ Prénom -->
             <div class="col-md-4">
                 <label for="prenom" class="form-label">Prénom</label>
                 <input type="text" class="form-control" id="prenom" placeholder="Insérez votre prénom" required>
             </div>
+
+            <!-- Champ Nom -->
             <div class="col-md-4">
                 <label for="nom" class="form-label">Nom de famille</label>
                 <input type="text" class="form-control" id="nom" placeholder="Insérez votre nom de famille" required>
             </div>
+
+            <!-- Champ Téléphone -->
             <div class="col-md-4">
                 <label for="telephone" class="form-label">Numéro de téléphone</label>
                 <input type="text" class="form-control" id="telephone" placeholder="Insérez votre numéro de téléphone" required>
             </div>
+
+            <!-- Champ Date de réservation -->
             <div class="mb-3">
                 <label for="reservation-date" class="form-label">Date de réservation</label>
                 <input type="date" class="form-control" id="reservation-date" required>
             </div>
+
+            <!-- Champ Email -->
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" placeholder="Insérez votre adresse email">
             </div>
+
+            <!-- Champ Message -->
             <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
                 <textarea class="form-control" id="message" rows="4"
                     placeholder="Écrivez votre message ici..."></textarea>
             </div>
+
+            <!-- Case à cocher pour acceptation des conditions -->
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="check" required>
                 <label class="form-check-label" for="check">Accepter les conditions</label>
             </div>
+
+            <!-- Bouton de soumission du formulaire -->
             <button type="submit" class="btn btn-primary">Faire une réservation</button>
         </form>
     </section>
 
+    <!-- Pied de page avec liens vers les réseaux sociaux -->
     <footer class="p-3 text-white text-center">
         Suivez-nous sur les réseaux sociaux :
         <a href="https://www.facebook.com" target="_blank" class="text-white mx-2">
@@ -136,10 +176,11 @@
         <br>2025 © Copyright
     </footer>
 
+    <!-- Script JavaScript pour afficher le message de confirmation -->
     <script>
         document.getElementById("form").addEventListener("submit", function (event) {
-            event.preventDefault();
-            document.getElementById("alert").classList.remove("d-none");
+            event.preventDefault(); // Empêche la soumission normale du formulaire
+            document.getElementById("alert").classList.remove("d-none"); // Affiche le message
         });
     </script>
 </body>
