--- a/contact.html
+++ b/contact.html
@@ -130,8 +130,8 @@
 
             <!-- Champ Téléphone -->
             <div class="col-md-4">
-                <label for="telephone" class="form-label">Numéro de téléphone</label>
-                <input type="text" class="form-control" id="telephone" placeholder="Insérez votre numéro de téléphone" required>
+                <label for="telephone" class="form-label">Numéro de table</label>
+                <input type="text" class="form-control" id="telephone" placeholder="Insérez votre numéro de table" required>
             </div>
 
             <!-- Champ Date de réservation -->
