--- a/projet2.html
+++ b/projet2.html
@@ -83,7 +83,7 @@
 
     <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <h1 class="text-center mt-4">Menu apres Midi</h1>
+            <h1 class="text-center mt-4">Menu Après midi</h1>
 
             <!-- Slide 1 -->
             <div class="carousel-item active">
