--- a/projet2.html
+++ b/projet2.html
@@ -92,21 +92,21 @@
                         <img src="pollo riz.jpg" class="card-img-top img-fluid" alt="menu1">
                         <div class="card-body">
                             <h5 class="card-title">Riz mukayaz plat chinois</h5>
-                            <p class="card-text">Riz avec poisson et fruits de saison et tout le condiments orientale 💶 Prix : 12,50 €.</p>
+                            <p class="card-text">Riz avec poisson et fruits de saison et tous les condiments orientaux 💶 Prix : 12,50 €.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
                         <img src="images\plat.jpg" class="card-img-top img-fluid" alt="menu2">
                         <div class="card-body">
                             <h5 class="card-title">Filet de bœuf grillé sauce au vin rouge</h5>
-                            <p class="card-text">Un tendre filet de bœuf, parfaitement grillé à la flamme, servi avec une délicieuse sauce au vin rouge réduite, relevée d’une touche d’échalotes et de poivre noir concassé. Garniture possible de légumes de saison ou purée maison, selon le choix du chef. 🥩 Viande savoureuse, cuisson maîtrisée, sauce onctueuse. 💶 Prix : 22,50 €.</p>
+                            <p class="card-text">Un tendre filet de bœuf, Parfaitement grillée, servie avec une délicieuse sauce au vin rouge réduite, relevée d’une touche d’échalotes et de poivre noir concassé. Garniture possible de légumes de saison ou purée maison, selon le choix du chef. 🥩 Viande savoureuse, cuisson maîtrisée, sauce onctueuse. 💶 Prix : 22,50 €.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
                         <img src="images\img\img-5.jpg" class="card-img-top img-fluid" alt="menu3">
                         <div class="card-body">
                             <h5 class="card-title">Rénoise Tuelleuse à la fraises</h5>
-                            <p class="card-text">Un dessert raffiné et gourmand composé d’une génoise aérienne, délicatement imbibée de sirop parfumé, garnie d’une crème légère au mascarpone et parsemée de fraises fraîches. 🍓 💶 Prix : 7,50 €.</p>
+                            <p class="card-text">Un dessert raffiné et gourmand composé d’une génoise aérienne, délicatement imbibée de sirop parfumé, garnie d’une Crème épicée, servie légère au mascarpone et parsemée de fraises fraîches. 🍓 💶 Prix : 7,50 €.</p>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                         <img src="images\img\img-2.png" class="card-img-top img-fluid" alt="menu4">
                         <div class="card-body">
                             <h5 class="card-title">Menu mixte pour Famille</h5>
-                            <p class="card-text">Base moelleuse, sauce tomate épicée, mozzarella fondue, tranches de pepperoni croustillantes, et basilic frais et hamburger et frites 💶 Prix : 10,90 €.</p>
+                            <p class="card-text">Base moelleuse, Sauce Tomate épicée, mozzarella fondue,Tranches de poivrons croustillants, et basilic frais et hamburger et frites 💶 Prix : 10,90 €.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
@@ -133,7 +133,7 @@
                         <img src="images\pasta.jpg" class="card-img-top img-fluid" alt="menu6">
                         <div class="card-body">
                             <h5 class="card-title">Spaghetti con ragù di carne</h5>
-                            <p class="card-text">Spaghetti al dente avec un ragù de bœuf mijoté aux herbes, champignons et sauce tomate maison, saupoudré de parmesan. 🥄 💶 Prix : 14,90 €.</p>
+                            <p class="card-text">Spaghetti al dente avec un ragù de bœuf mijoté aux herbes, champignons et sauce tomate saupoudré de parmesan. 🥄 💶 Prix : 14,90 €.</p>
                         </div>
                     </div>
                 </div>
