--- a/projet2.html
+++ b/projet2.html
@@ -66,11 +66,11 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                            <li><a class="dropdown-item" href="projet.html">Menu apres midi</a></li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu apres midi</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="projet.html">Menu soire</a></li>
+                            <li><a class="dropdown-item" href="projet3.html">Menu soirée</a></li>
                         </ul>
                     </li>
                 </ul>
