--- a/projet2.html
+++ b/projet2.html
@@ -66,7 +66,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                            <li><a class="dropdown-item" href="projet2.html">Menu apres midi</a></li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu Après midi</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
