--- a/projet3.html
+++ b/projet3.html
@@ -78,11 +78,11 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                            <li><a class="dropdown-item" href="projet.html">Menu apres midi</a></li>
+                            <li><a class="dropdown-item" href="proje2.html">Menu Aprés midi</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="projet.html">Menu soirée</a></li>
+                            <li><a class="dropdown-item" href="projet3.html">Menu soirée</a></li>
                         </ul>
                     </li>
                 </ul>
