--- a/projet.html
+++ b/projet.html
@@ -79,7 +79,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                            <li><a class="dropdown-item" href="projet2.html">Menu après-midi</a></li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu Après-midi</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
