--- a/projet3.html
+++ b/projet3.html
@@ -78,7 +78,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                            <li><a class="dropdown-item" href="proje2.html">Menu Aprés midi</a></li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu Aprés midi</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
