--- a/projet.html
+++ b/projet.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <style>
-        /* Navbar */
+        /* Navbar personnalisée */
         .navbar-custom {
             background-color: white;
             padding: 15px;
@@ -23,11 +23,12 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        /* Pour espacer le contenu à cause de la navbar fixe */
+        /* Espace sous la navbar fixe */
         .carousel-wrapper {
             margin-top: 160px;
         }
 
+        /* Bouton rouge personnalisé */
         .btn-primary-custom {
             background-color: rgb(240, 48, 48);
             color: white;
@@ -36,22 +37,26 @@
             border: none;
         }
 
+        /* Images des cartes uniformisées */
         .card-img-top {
             height: 200px;
             object-fit: cover;
         }
 
+        /* Espace sous le carrousel */
         .carousel-inner {
             margin-bottom: 200px;
         }
 
+        /* Footer : margin-top supprimé car on utilise mt-auto */
         footer {
-            margin-top: 40px;
+            background-color: #dc3545;
         }
     </style>
 </head>
 
-<body>
+<body class="min-vh-100 d-flex flex-column"> <!-- Flexbox sur le body pour pousser le footer -->
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
@@ -65,7 +70,6 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="index.html">À propos</a>
                     </li>
@@ -94,7 +98,7 @@
         </div>
     </nav>
 
-    <!-- Carousel Cards avec décalage haut -->
+    <!-- Contenu principal : carousel de plats -->
     <div class="carousel-wrapper">
         <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -173,7 +177,7 @@
                 </div>
             </div>
 
-            <!-- Contrôles -->
+            <!-- Contrôles du carousel -->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
                 <span class="visually-hidden">Précédent</span>
@@ -185,8 +189,8 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="p-3 bg-danger text-white text-center">
+    <!-- Footer toujours en bas -->
+    <footer class="p-3 bg-danger text-white text-center mt-auto">
         Suivez-nous sur les réseaux sociaux :
         <a href="https://www.facebook.com" target="_blank" class="text-white mx-2">
             <i class="bi bi-facebook"></i>
@@ -197,7 +201,7 @@
         <br />
         2025 © Copyright
     </footer>
-</body>
 
+</body>
 </html>
 
