--- a/contact.html
+++ b/contact.html
@@ -75,14 +75,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="contact.html">Contact</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-danger fw-bold" href="projet.html">Explore les différents plats</a>
-                    </li>
+                   
                     <!-- Menu déroulant pour les différents menus -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-danger fw-bold" href="#" id="navbarDropdown"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menus
+                           Explore les différents plats
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
